--- a/styles.css
+++ b/styles.css
@@ -59,14 +59,6 @@ picture {
     color: #9C225D;
 }
 
-.link:hover {
-    color: gray;
-}
-
-.link:active {
-    color: burlywood;
-}
-
 /* Selectors - ID Selector */
 
 #anoushka-image {
@@ -89,3 +81,19 @@ picture {
     border-width: 0.2em;
     border-radius: 1;
 }
+
+/* Selectors - Universal Selector */
+
+/* Selectors - Attribute Selector */
+
+/* Selectors - Pseudo-class Selector */
+
+.link:hover {
+    color: gray;
+}
+
+.link:active {
+    color: burlywood;
+}
+
+/* Selectors - Grouping/Combinators Selector */
